--- a/index.html
+++ b/index.html
@@ -3,84 +3,92 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>العد التنازلي لعيد ميلادي</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Cairo', sans-serif; background: url('https://images.unsplash.com/photo-1519744792095-2f2205e87b6f') center/cover no-repeat; }
-    .glass { backdrop-filter: blur(15px); background: rgba(255,255,255,0.15); border: 1px solid rgba(255,255,255,0.3); }
-  </style>
+  <title>المتجر | الرئيسية</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="icon" href="./favicon.ico">
 </head>
-<body class="min-h-screen flex flex-col justify-center items-center text-white">
-  <div class="glass p-8 rounded-2xl shadow-lg w-11/12 max-w-lg text-center">
-    <h1 class="text-3xl font-bold mb-4">العد التنازلي لعيد ميلادي 🎉</h1>
-    <div id="countdown" class="grid grid-cols-3 gap-4 text-xl font-bold"></div>
-    <p id="age" class="mt-4 text-lg"></p>
-    <hr class="my-4 border-white/40">
+<body class="bg-gray-50 text-gray-900">
+  <header class="bg-white sticky top-0 shadow z-10">
+    <div class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between">
+      <a href="./" class="font-extrabold text-xl">🛍️ متجري</a>
+      <nav class="flex items-center gap-4 text-sm">
+        <a href="./" class="hover:text-blue-600">المنتجات</a>
+        <a href="./cart.html" class="hover:text-blue-600">السلة</a>
+      </nav>
+    </div>
+  </header>
 
-    <h2 class="text-2xl mb-2">💌 اكتب رسالة</h2>
-    <form id="messageForm" class="space-y-3">
-      <input type="text" name="name" placeholder="الاسم (اختياري)" class="w-full p-2 rounded bg-white/20 border border-white/30 text-white placeholder-white">
-      <textarea name="message" placeholder="اكتب تهنئة أو نصيحة..." class="w-full p-2 rounded bg-white/20 border border-white/30 text-white placeholder-white" required></textarea>
-      <button type="submit" class="px-4 py-2 bg-blue-500 hover:bg-blue-600 rounded font-bold">إرسال</button>
-    </form>
-    <p id="status" class="mt-2 text-sm"></p>
-  </div>
+  <main class="max-w-6xl mx-auto px-4 py-6">
+    <div class="flex flex-col md:flex-row gap-4 md:items-center md:justify-between mb-6">
+      <h1 class="text-2xl font-bold">كل المنتجات</h1>
+      <div class="flex gap-2">
+        <input id="search" placeholder="ابحث عن منتج..." class="w-64 px-3 py-2 border rounded" />
+        <select id="sort" class="px-3 py-2 border rounded">
+          <option value="new">الأحدث</option>
+          <option value="price-asc">السعر: من الأقل للأعلى</option>
+          <option value="price-desc">السعر: من الأعلى للأقل</option>
+        </select>
+      </div>
+    </div>
 
-<script>
-const BIRTH_MONTH = 8; // أغسطس
-const BIRTH_DAY = 29;
-const BIRTH_YEAR = 2000; // غيّرها لسنة ميلادك
-const API_URL = "https://script.google.com/macros/s/AKfycbw1OKgYFvM-UgurQT0uap2iNAKHlWFFgezhXK5c-03Wlk4GabK8UHQMcXjJaNW-3pEYig/exec"; // ضع رابط Google Apps Script هنا
+    <div id="grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6"></div>
+  </main>
 
-function updateCountdown() {
-  const now = new Date();
-  let nextBirthday = new Date(now.getFullYear(), BIRTH_MONTH-1, BIRTH_DAY);
-  if (now > nextBirthday) {
-    nextBirthday.setFullYear(nextBirthday.getFullYear() + 1);
-  }
+  <footer class="py-8 text-center text-sm text-gray-500">© <span id="year"></span> متجري — نسخة تجريبية</footer>
 
-  const diff = nextBirthday - now;
-  const days = Math.floor(diff / (1000*60*60*24));
-  const hours = Math.floor((diff / (1000*60*60)) % 24);
-  const minutes = Math.floor((diff / (1000*60)) % 60);
-  const seconds = Math.floor((diff / 1000) % 60);
+  <script type="module">
+    import { products } from "./assets/store.js";
+    import { Cart } from "./assets/cart.js";
+    import { formatCurrency, qs } from "./assets/utils.js";
 
-  document.getElementById("countdown").innerHTML = `
-    <div>🗓 ${days} يوم</div>
-    <div>⏰ ${hours} ساعة</div>
-    <div>⌛ ${minutes} دقيقة</div>
-    <div>⏳ ${seconds} ثانية</div>
-  `;
+    const grid = document.getElementById('grid');
+    const search = document.getElementById('search');
+    const sort = document.getElementById('sort');
 
-  const age = now.getFullYear() - BIRTH_YEAR - ((now.getMonth() > BIRTH_MONTH-1 || (now.getMonth() === BIRTH_MONTH-1 && now.getDate() >= BIRTH_DAY)) ? 0 : 1);
-  document.getElementById("age").textContent = `عمري: ${age} سنة`;
-}
+    function render(list){
+      grid.innerHTML = list.map(p => `
+        <a href="./product.html?slug=${p.slug}" class="bg-white rounded-2xl overflow-hidden shadow hover:shadow-lg transition block">
+          <div class="aspect-w-16 aspect-h-9 bg-gray-100">
+            <img src="${p.image}" alt="${p.title}" class="w-full h-56 object-cover">
+          </div>
+          <div class="p-4">
+            <div class="flex items-start justify-between gap-2">
+              <h2 class="font-bold">${p.title}</h2>
+              <div class="text-sm text-gray-500">${p.badges?.map(b=>`<span class='ml-1 bg-gray-100 border rounded px-2 py-0.5'>${b}</span>`).join('')}</div>
+            </div>
+            <div class="mt-2 text-lg font-extrabold">
+              ${p.discount ? `<span class="text-red-600">${p.discount} ج</span> <span class="line-through text-gray-400 text-base">${p.price} ج</span>` : `${p.price} ج`}
+            </div>
+            <button data-id="${p.id}" class="mt-3 w-full add bg-blue-600 text-white py-2 rounded hover:bg-blue-700">أضف للسلة</button>
+          </div>
+        </a>
+      `).join('');
 
-setInterval(updateCountdown, 1000);
-updateCountdown();
-
-document.getElementById("messageForm").addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const formData = new FormData(e.target);
-  const data = Object.fromEntries(formData.entries());
-
-  try {
-    const res = await fetch(API_URL, {
-      method: "POST",
-      body: JSON.stringify(data),
-      headers: { "Content-Type": "application/json" }
-    });
-    if (res.ok) {
-      document.getElementById("status").textContent = "✅ تم إرسال الرسالة";
-      e.target.reset();
-    } else {
-      document.getElementById("status").textContent = "❌ فشل الإرسال";
+      // add to cart buttons
+      document.querySelectorAll('.add').forEach(btn => {
+        btn.addEventListener('click', (e) => {
+          e.preventDefault();
+          const p = products.find(x => x.id === btn.dataset.id);
+          Cart.add(p, 1);
+          btn.textContent = '✔ أُضيفت';
+          setTimeout(()=> btn.textContent='أضف للسلة', 1200);
+        });
+      });
     }
-  } catch {
-    document.getElementById("status").textContent = "⚠️ حدث خطأ في الاتصال";
-  }
-});
-</script>
+
+    function apply(){
+      let list = [...products];
+      const q = search.value.trim();
+      if(q) list = list.filter(p => p.title.includes(q) || p.description.includes(q));
+      if(sort.value === 'price-asc') list.sort((a,b)=> (a.discount ?? a.price) - (b.discount ?? b.price));
+      if(sort.value === 'price-desc') list.sort((a,b)=> (b.discount ?? b.price) - (a.discount ?? a.price));
+      render(list);
+    }
+
+    search.addEventListener('input', apply);
+    sort.addEventListener('change', apply);
+    apply();
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
